--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,6 @@
     font: inherit;
 }
 
-
 p,
 h1,
 h2,
@@ -20,12 +19,6 @@ dl,
 dd {
     overflow-wrap: break-word;
 }
-
-/* h1,
-h2,
-h3 {
-    line-height: 1.15;
-} */
 
 a {
     color: inherit;
@@ -68,30 +61,6 @@ video {
     display: block;
 }
 
-
-/* input,
-button,
-textarea,
-select {
-    font: inherit;
-} */
-
-/* @media (prefers-reduced-motion: reduce) {
-    html:focus-within {
-        scroll-behavior: auto;
-    }
-
-    *,
-    *::before,
-    *::after {
-        animation-duration: 0.01ms !important;
-        animation-iteration-count: 1 !important;
-        transition-duration: 0.01ms !important;
-        scroll-behavior: auto !important;
-    }
-}
- */
-
 /** -----{Root Properties}----- **/
 :root {
     /* 
@@ -122,15 +91,21 @@ select {
 
     --ff-base: 'Poppins';
 
+    --fs-multiplier: 1;
+
     --fs-100: 0.625rem;
-    --fs-200: 0.75rem;
     --fs-300: 0.875rem;
     --fs-400: 1rem;
     --fs-500: 1.25rem;
     --fs-700: 2rem;
-
+    --fs-900: 3.415rem;
+    
     --fw-base: 400;
     --fw-bold: 700;
+    
+    @media (width > 625px) {
+        --fs-multiplier: 1.365;
+    }
 }
 
 /** -----{General Styling}----- **/
@@ -142,87 +117,153 @@ body {
     font-size: var(--fs-400);
 }
 
-/** -----{Utilities}----- **/
-.italic {
-    font-style: italic;
-}
-
-.flex {
-    display: flex;
-    gap: var(--_spacing, 0);
-    /* gap: calc(var(--_spacing, 0) * var(--_spacing-multiplier, 1)); */
-}
-
-.flex.dir-col {
-    flex-direction: column;
-}
-
-.flex.flex-wrap {
-    flex-wrap: wrap;
-}
-
-.jc-c {
-    justify-content: center;
-}
-
-.jc-sb {
-    justify-content: space-between;
-}
-
-.ai-c {
-    align-items: center;
-}
-
 /** -----{Components}----- **/
 .form-item {
-    --_spacing: 0.25rem;
-    align-items: baseline;
+    display: grid;
+    position: relative;
+    gap: 0.25rem;
 }
 
 .text-field-label {
     text-transform: uppercase;
-    letter-spacing: 0.2rem;
-    font-size: var(--fs-200);
+    letter-spacing: 0.15rem;
+    font-size: calc(var(--fs-100) + 0.1rem);
     font-weight: var(--fw-bold);
     color: var(--clr-neutral-500);
+}
+
+.form-item.invalid .text-field-label {
+    color: var(--clr-invalid-400);
+}
+
+.text-field-info {
+    display: none;
+    font-size: calc(var(--fs-100) + 0.075rem);
+    font-style: italic;
+    color: var(--clr-invalid-400);
+}
+
+.form-item.invalid .text-field-info {
+    display: initial;
 }
 
 .text-field {
     width: 100%;
     outline: none;
-    border: 1px solid hsl(var(--clr-neutral-900-raw), 0.15);
-    border-radius: 0.25rem;
+    border: 2px solid hsl(var(--clr-neutral-900-raw), 0.1);
+    border-radius: 0.5rem;
     padding: 0.5rem;
+    font-size: var(--fs-500);
+
+    @media (width > 550px) {
+        border-radius: 0.3rem;
+    }
+}
+
+.text-field:focus-visible {
+    border-color: hsl(var(--clr-neutral-900-raw), 0.45);
+}
+
+.form-item.invalid .text-field {
+    border-color: hsl(var(--clr-invalid-400-raw), 0.25);
 }
 
 .primary-btn {
-    width: 25%;
+    position: relative;
+    width: 4rem;
     aspect-ratio: 1;
+    border: none;
+    border-radius: 50%;
+
+    background-image: url("../assets/images/icon-arrow.svg");
+    background-color: var(--clr-primary-400);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 50%;
+
+    @media (width > 550px) {
+        justify-self: end;
+    }
+
+    @media (hover: hover) {
+        &:hover {
+            cursor: pointer;
+            background-color: var(--clr-neutral-700);
+        }
+    }
 }
 
 /** -----{App Styling}----- **/
-.app {
+ .app {
+    --_app-spacing: calc(1rem * var(--_app-spacing-multiplier, 1));
+    --_app-spacing-multiplier: 2;
+
+    --_app-max-width: 42.5rem;
+    
     display: grid;
-    gap: 1rem;
+    max-width: var(--_app-max-width);
+    gap: var(--_app-spacing);
     overflow: hidden;
-    margin: 0 0.75rem;
-    padding: 1rem;
+
+    padding: 2.75rem 1.25rem;
+    margin: auto 1rem;
     background-color: var(--clr-neutral-100);
-    border-radius: 7.5% 7.5% 30% 7.5%; 
-}
+    border-radius: 1.25rem 1.25rem 25% 1.25rem;
 
-.primary-form {
+    @media (width > 450.5px) {
+        --_app-spacing-multiplier: 0.5;
+        padding: 2.75rem;
+    }
+ }
+
+ /** -----{Primry Form Styling}----- **/
+ .primary-form {
     display: grid;
+    gap: var(--_app-spacing);
+ }
+
+ /** -----{Primry Form Start Styling}----- **/
+.primary-form__start {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     gap: 1rem;
+    width: min(100%, calc(var(--_app-max-width) / 1.575));
 }
 
-.primary-form__wrap {
-    display: grid;
-    grid-template-columns: repeat(3, 0.35fr);
-    gap: 0.5rem;
-    /* margin: 0 0 40px; */
+.primary-form__start > * {
+    flex: 1
 }
 
-.primary-form__submit {
+/** -----{Primry Form End Styling}----- **/
+.primary-form__end {
     display: grid;
+    place-items: center;
+}
+
+.primary-form__end > * {
+    grid-area: 1/1/-1/-1;
+}
+
+.primary-form__end hr {
+    border: none;
+    background-color: hsl(var(--clr-neutral-900-raw), 0.075);
+    width: 100%;
+    height: 1.75px;
+}
+
+/** -----{Results Styling}----- **/
+.results {
+    font-size: calc(var(--fs-900) * var(--fs-multiplier, 1));
+    font-style: italic;
+    font-weight: var(--fw-bold);
+}
+
+/** -----{Results Text Styling}----- **/
+.results__text {
+    line-height: 1.1;
+}
+
+.results__text span {
+    color: var(--clr-primary-400); 
 }
